--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,40 @@
 @import "reset.css";
+.navbar {
+  height: 70px;
+  flex-wrap: nowrap;
+}
+.navbar-collapse {
+  justify-content: flex-end;
+}
+
+.header-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+.header-logo:hover {
+  text-decoration: none;
+}
+.header-logo-icon {
+  height: 17px;
+  width: 17px;
+  border-radius: 50%;
+  border: 4px solid #4682B4;
+  background-color: transparent;
+  margin-right: 10px;
+}
+.header-logo-text {
+  color: #5F9EA0;
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.nav-item {
+  margin: 0 5px;
+}
+
 * {
   box-sizing: border-box;
 }
