--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import "elements/header";
 @import "elements/article";
 @import "elements/sidebar";
+@import "elements/comments";
 
 * {
     box-sizing: border-box;
