--- a/scss/settings/_colors.scss
+++ b/scss/settings/_colors.scss
@@ -1,3 +1,6 @@
 $c-logo-icon: #4682B4;
 $c-logo-text: #5F9EA0;
 $c-article-date: #999999;
+$c-comment-date: #999999;
+$c-comment-votes: #999999;
+$c-comment-votes-hover: #212529;
