--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import "elements/article";
 @import "elements/sidebar";
 @import "elements/comments";
+@import "elements/footer";
 
 * {
     box-sizing: border-box;
