--- a/scss/settings/_colors.scss
+++ b/scss/settings/_colors.scss
@@ -4,3 +4,7 @@ $c-article-date: #999999;
 $c-comment-date: #999999;
 $c-comment-votes: #999999;
 $c-comment-votes-hover: #212529;
+$c-footer-border:  #ececec;
+$c-footer-link:  #212529;
+$c-footer-social:  #212529;
+$c-footer-copyright:  #999999;
