--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@
 .sidebar-wrap .figure-caption {
   margin-bottom: 10px;
   color: inherit;
+  font-weight: bold;
 }
 
 @media (max-width: 768px) {
