--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import "reset.css";
 @import "settings/colors";
 @import "settings/fonts";
+@import "settings/sizes";
 
 @import "elements/header";
 @import "elements/article";
