--- a/scss/elements/_sidebar.scss
+++ b/scss/elements/_sidebar.scss
@@ -1,6 +1,8 @@
+@import "../scss/settings/sizes";
+
 .sidebar-wrap {
     padding-right: 0;
-    margin-top: 70px;
+    margin-top: 70px + $header-height;
 
     .sidebar-title {
         margin-bottom: 20px;
