--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,12 @@
 .sidebar-wrap .sidebar-title {
   margin-bottom: 20px;
 }
+.sidebar-wrap .sidebar-element:hover {
+  opacity: 0.8;
+}
+.sidebar-wrap .sidebar-element:hover .figure-caption {
+  opacity: 0.6;
+}
 .sidebar-wrap .figure-caption {
   margin-bottom: 10px;
   color: inherit;
