--- a/scss/elements/_sidebar.scss
+++ b/scss/elements/_sidebar.scss
@@ -8,6 +8,14 @@
         margin-bottom: 20px;
     }
 
+    .sidebar-element:hover {
+        opacity: 0.8;
+
+        .figure-caption {
+            opacity: 0.6;
+        }
+    }
+
     .figure-caption {
         margin-bottom: 10px;
         color: inherit;
