--- a/css/main.css
+++ b/css/main.css
@@ -188,4 +188,10 @@ body {
 .row {
   margin: 0;
 }
+
+@media (max-width: 768px) {
+  body {
+    font-size: 1.2em;
+  }
+}
 /*# sourceMappingURL=main.css.map */
