--- a/scss/elements/_comments.scss
+++ b/scss/elements/_comments.scss
@@ -14,6 +14,11 @@
             border-radius: 15px;
             padding: 6px 20px;
             text-transform: uppercase;
+
+            &:focus {
+                outline: none;
+                box-shadow: none;
+            }
         }
     }
 
@@ -22,6 +27,7 @@
 
         .comment {
             margin: 10px 0;
+            width: 100%;
 
             &-header {
                 margin-bottom: 10px;
