--- a/scss/elements/_comments.scss
+++ b/scss/elements/_comments.scss
@@ -53,6 +53,11 @@
             &:hover {
                 color: $c-comment-votes-hover;
             }
+
+            &:focus {
+                outline: none;
+                box-shadow: none;
+            }
         }
     }
 }
