--- a/css/main.css
+++ b/css/main.css
@@ -373,6 +373,19 @@ template {
   margin: 0 5px;
 }
 
+@media (min-width: 768px) {
+  .navbar {
+    height: unset;
+  }
+  .navbar-collapse {
+    padding: 15px 5px;
+    font-size: 22px;
+  }
+
+  .nav-item {
+    border-bottom: 0.5px solid #ddd;
+  }
+}
 .article-wrap {
   margin-top: 120px;
   padding: 0 15px;
